# systemd-status-leds

./: .gitignore  .slsa-goreleaser.yml  Cargo.toml  README.md  config  config.yaml  flake.nix  go.mod  go.sum  main.go
.github/workflows/: go-ossf-slsa3-publish.yml  go.yml  release.yml  rust.yml
led/: led.go
src/: config.rs  led.rs  lib.rs  main.rs  strip.rs  systemd.rs
strip/: strip.go
